<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/createAccountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="60dp"
            android:text="@string/create_account"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <EditText
            android:id="@+id/createFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccountView"
            android:importantForAutofill="no" />



        <EditText
            android:id="@+id/createLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:importantForAutofill="no"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createFirstName" />



        <EditText
            android:id="@+id/createEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:importantForAutofill="no"
            android:ems="10"
            android:hint="@string/email"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createLastName" />


        <TextView
            android:id="@+id/chooseEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:text="@string/choose_education"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/civAI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/civilingenj_r_i_ai_och_maskininl_rning"
            android:textSize="18sp"  />


        <CheckBox
            android:id="@+id/civMjukvaru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/civilingenj_r_i_mjukvaruutveckling"
            android:textSize="18sp"  />


        <CheckBox
            android:id="@+id/software"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/software_engineering"
            android:textSize="18sp"  />
        <CheckBox
            android:id="@+id/civSak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/civilingenj_r_i_dators_kerhet"
            android:textSize="18sp"  />
        <CheckBox
            android:id="@+id/hogSak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/h_gskoleingenj_r_i_it_s_kerhet"
            android:textSize="18sp"  />

        <CheckBox
            android:id="@+id/civIndek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/civilingenj_r_i_industriell_ekonomi"
            android:textSize="18sp"  />

        <CheckBox
            android:id="@+id/civMarin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/civilingenj_r_i_marin_teknik"
            android:textSize="18sp"  />

        <CheckBox
            android:id="@+id/civMaskin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/civilingenj_r_i_maskinteknik"
            android:textSize="18sp"  />

        <CheckBox
            android:id="@+id/hogMaskin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/h_gskoleingenj_r_i_maskinteknik"
            android:textSize="18sp"  />

        <CheckBox
            android:id="@+id/civSpel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="Civilingenjör i spel- och programvaruteknik"
            android:textSize="18sp"  />

        <CheckBox
            android:id="@+id/hogSpel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/spelprogrammering"
            android:textSize="18sp"  />

        <CheckBox
            android:id="@+id/educationElse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/other_education"
            android:textSize="18sp"  />



        <EditText
            android:id="@+id/createUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createEmail" />


        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordText"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/createPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="0dp"
            android:importantForAutofill="no"
            android:ems="10"
            android:hint="@string/createPassword"
            android:inputType="textPassword" />


        <TextView
            android:id="@+id/passwordText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/createPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/createPassword2"
            android:inputType="textPassword"
            android:importantForAutofill="no"/>

        <TextView
            android:id="@+id/passwordCriteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="0dp"
            android:text="@string/the_password_needs_to_fill_these_critera"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/password8char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="0dp"
            android:text="@string/atleast_8_characters_long"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/passwordUppercaseLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="0dp"
            android:text="@string/atleast_one_uppercase_letter_a"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/passwordDigit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="0dp"
            android:text="@string/atleast_one_digit_0_9"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkBoxGDPR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/i_agree_to_the_use_of_my_personal_information_according_to_gdprs_laws"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBoxRules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/i_agree_to_follow_the_rules_on_this_app"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/notFilled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:layout_marginLeft="60sp"
            android:layout_marginStart="60sp"
            android:layout_marginTop="20sp" />

        <Button
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:text="@string/create_account"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>